--- a/gradle.properties
+++ b/gradle.properties
@@ -2,6 +2,7 @@
 org.gradle.jvmargs=-Xmx4g
 org.gradle.daemon=true
 org.gradle.parallel=true
+org.gradle.java.home=C:\\Users\\dchaban\\.jdks\\liberica-21.0.9
 # -------Plugins---------
 jgitver=0.10.0-rc03
 dependencyManagement=1.1.7
